# openapi.json
@@ -4218,6 +4218,20 @@
         ]
       }
     },
+    "/api/v1/tenant/disputes": {
+      "get": {
+        "operationId": "disputes_listAll",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Disputes"
+        ]
+      }
+    },
     "/api/v1/tenant/orders/{orderId}/disputes": {
       "get": {
         "operationId": "disputes_list",
